tests/specs/check/ts_suppression_unresolved_import/unsuppressed.ts
import value from "missing-package";

console.log(value);
